@@ -1,3 +1,10 @@
+2003-11-22  Jacob Smullyan  <smulloni@bracknell.smullyan.org>
+
+	* SkunkWeb/Services/httpd/protocol.py
+	(HTTPProtocol.marshalResponse): bug fix that permits httpd to send
+	multiple headers with the same name (as in Set-Cookie).  Thanks to
+	Dan Chow for reporting this.
+
 2003-11-17  Jacob Smullyan  <smulloni@bunbury.smullyan.org>
 
 	* SkunkWeb/Services/product/loader.py (Product.__reallyload): when
